# delivery-practices

./: .copier-answers.yml  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  graft.yaml  knowledge-base.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
docs/: README.md  comprehension.md  format.md  relationships.md  verification.md
docs/decisions/: 2026-01-24-tooling-architecture.md
docs/living-specifications/: README.md  comprehension.md  format.md  principles.md  relationships.md  verification.md
docs/living-specifications/guides/: ensemble-with-specs.md  reviewing-against-specs.md  writing-specs.md
docs/specifications/: README.md  comprehension.md  format.md  relationships.md  verification.md
docs/workflow/: README.md
docs/workflow/guides/: iterative-critique.md  pr-descriptions.md  session-logging.md
meetings/: _template.yaml
notes/: 2026-01-23-initialization.md  2026-01-23-living-specifications.md  2026-01-24-ai-assisted-workflow.md  2026-01-24-pr-reviewability.md  2026-01-24-tooling-cleanup.md  2026-01-24-tooling-expansion.md  2026-01-25-pr-description-generator.md  2026-01-25-team-practices-meeting.md  2026-01-26-repository-restructure.md  2026-01-30-usai-practice-lab-intro.md  index.md
notes/presentations/: 2026-01-30-usai-practice-lab-intro.md  README.md
playbooks/: README.md  ensemble-with-specs.md  iterative-critique.md  pr-descriptions.md  practice-lab.md  reviewing-against-specs.md  session-logging.md  writing-specs.md
policies/: README.md  living-specifications.md
scripts/: setup.sh  test.sh
specs/: README.md  backlink-scanner.md  kb-linter.md  link-validator.md  pr-description-generator.md  tool-cli.md
src/: backlink-scanner.ts
src/backlink_scanner/: __init__.py  __main__.py  scanner.py
src/kb_linter/: __init__.py  __main__.py  linter.py
src/link_validator/: __init__.py  __main__.py  validator.py
src/pr_description_generator/: __init__.py  __main__.py  generator.py  models.py  protocols.py
src/pr_description_generator/adapters/: __init__.py  github.py  plain.py
src/tool_cli/: __init__.py
tests/: __init__.py  backlink-scanner.test.ts  conftest.py  test_adapters.py  test_cli.py  test_generator_with_adapters.py  test_kb_linter_cli.py  test_link_validator_cli.py  test_linter.py  test_pr_description_cli.py  test_pr_description_generator.py  test_scanner.py  test_validator.py
tests/fakes/: __init__.py  fake_link_adapter.py
